--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "module": "ESNext",
     "skipLibCheck": true,
     "noEmitOnError": false,
-    "outDir": "./dist",
+    // "outDir": "./dist",
 
     /* Bundler mode */
     "moduleResolution": "bundler",
