--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,5 +23,7 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": ["src"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "references": [{ "path": "./tsconfig.node.json" }],
+  "outDir": "./dist",
+  "rootDir": "./src",
 }
